<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/baseline_arrow_back_24"
                    android:contentDescription="@string/back_arrow" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/welcome_back"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_get_you_back_where_you_belong"
                    android:textColor="?android:attr/textColor"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/email_address"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/enter_your_username_here"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textColor="?android:attr/textColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:text="@string/password"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            android:textColor="@color/primaryColor"
                            android:textSize="14sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/enter_our_email_address"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textColor="?android:attr/textColor" />

                    <CheckBox
                        android:id="@+id/toggle_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_password"
                        android:textColor="?android:attr/textColor" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_main_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="?android:attr/textColor"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/primaryColor"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>