<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/baseline_arrow_back_24"
                    android:contentDescription="@string/back_arrow" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/create_an_account_and_connect_with_your_friends"
                    android:textColor="?android:attr/textColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/last_name"
                                android:textStyle="bold"
                                android:textSize="14sp"/>

                        </LinearLayout>

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="name"
                            android:padding="15dp"
                            android:hint="Last Name"
                            android:textColor="?android:attr/textColor"
                            android:inputType="text"
                            android:background="@drawable/edit_text_bg"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/first_name"
                                android:textStyle="bold"
                                android:textSize="14sp"/>

                        </LinearLayout>

                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:hint="@string/first_name"
                            android:textColor="?android:attr/textColor"
                            android:inputType="text"
                            android:background="@drawable/edit_text_bg"/>
                    </LinearLayout>

                </LinearLayout>


<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    android:layout_marginBottom="20dp">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="horizontal"-->
<!--                        android:layout_marginBottom="5dp">-->

<!--                        <TextView-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_weight="1"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/username"-->
<!--                            android:textStyle="bold"-->
<!--                            android:textSize="14sp"/>-->

<!--                    </LinearLayout>-->

<!--                    <EditText-->
<!--                        android:id="@+id/user_name"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:padding="15dp"-->
<!--                        android:hint="@string/enter_your_username_here"-->
<!--                        android:inputType="text"-->
<!--                        android:background="@drawable/edit_text_bg"/>-->
<!--                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="Email"
                            android:textStyle="bold"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="Your email address here"
                        android:textColor="?android:attr/textColor"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/edit_text_bg"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:text="@string/password"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            android:textStyle="normal"
                            android:textSize="14sp"
                            android:textColor="@color/primaryColor"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/enter_our_email_address"
                        android:textColor="?android:attr/textColor"
                        android:inputType="textPassword"
                        android:autofillHints="password"
                        android:background="@drawable/edit_text_bg"/>

                    <CheckBox
                        android:id="@+id/toggle_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Show Password"
                        android:textColor="?android:attr/textColor"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_main_bg"
                android:text="@string/register"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Have an account?"
                    android:textSize="13sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="?android:attr/textColor"/>

                <TextView
                    android:id="@+id/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Log In"
                    android:textStyle="bold"
                    android:textColor="@color/primaryColor"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="By clicking Register, you agree to our"
                android:textSize="13sp"
                android:layout_marginBottom="5dp"
                android:textColor="?android:attr/textColor"/>

            <TextView
                android:id="@+id/terms_and_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms and Conditions Policy"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/primaryColor"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>